@@ -250,73 +250,73 @@ function fgymm_fonts_url() {
 
 function fgymm_show_social_sites() {
 
-	$socialURL = get_theme_mod('fgymm_social_facebook', '#');
+	$socialURL = get_theme_mod('fgymm_social_facebook');
 	if ( !empty($socialURL) ) {
 
 		echo '<li><a href="' . esc_url( $socialURL ) . '" title="' . __('Follow us on Facebook', 'fgymm') . '" class="facebook16"></a>';
 	}
 
-	$socialURL = get_theme_mod('fgymm_social_google', '#');
+	$socialURL = get_theme_mod('fgymm_social_google');
 	if ( !empty($socialURL) ) {
 
 		echo '<li><a href="' . esc_url( $socialURL ) . '" title="' . __('Follow us on Google+', 'fgymm') . '" class="google16"></a>';
 	}
 
-	$socialURL = get_theme_mod('fgymm_social_twitter', '#');
+	$socialURL = get_theme_mod('fgymm_social_twitter');
 	if ( !empty($socialURL) ) {
 
 		echo '<li><a href="' . esc_url( $socialURL ) . '" title="' . __('Follow us on Twitter', 'fgymm') . '" class="twitter16"></a>';
 	}
 
-	$socialURL = get_theme_mod('fgymm_social_linkedin', '#');
+	$socialURL = get_theme_mod('fgymm_social_linkedin');
 	if ( !empty($socialURL) ) {
 
 		echo '<li><a href="' . esc_url( $socialURL ) . '" title="' . __('Follow us on LinkedIn', 'fgymm') . '" class="linkedin16"></a>';
 	}
 
-	$socialURL = get_theme_mod('fgymm_social_instagram', '#');
+	$socialURL = get_theme_mod('fgymm_social_instagram');
 	if ( !empty($socialURL) ) {
 
 		echo '<li><a href="' . esc_url( $socialURL ) . '" title="' . __('Follow us on Instagram', 'fgymm') . '" class="instagram16"></a>';
 	}
 
-	$socialURL = get_theme_mod('fgymm_social_rss', get_bloginfo( 'rss2_url' ));
+	$socialURL = get_theme_mod('fgymm_social_rss');
 	if ( !empty($socialURL) ) {
 
 		echo '<li><a href="' . esc_url( $socialURL ) . '" title="' . __('Follow our RSS Feeds', 'fgymm') . '" class="rss16"></a>';
 	}
 
-	$socialURL = get_theme_mod('fgymm_social_tumblr', '#');
+	$socialURL = get_theme_mod('fgymm_social_tumblr');
 	if ( !empty($socialURL) ) {
 
 		echo '<li><a href="' . esc_url( $socialURL ) . '" title="' . __('Follow us on Tumblr', 'fgymm') . '" class="tumblr16"></a>';
 	}
 
-	$socialURL = get_theme_mod('fgymm_social_youtube', '#');
+	$socialURL = get_theme_mod('fgymm_social_youtube');
 	if ( !empty($socialURL) ) {
 
 		echo '<li><a href="' . esc_url( $socialURL ) . '" title="' . __('Follow us on Youtube', 'fgymm') . '" class="youtube16"></a>';
 	}
 
-	$socialURL = get_theme_mod('fgymm_social_pinterest', '#');
+	$socialURL = get_theme_mod('fgymm_social_pinterest');
 	if ( !empty($socialURL) ) {
 
 		echo '<li><a href="' . esc_url( $socialURL ) . '" title="' . __('Follow us on Pinterest', 'fgymm') . '" class="pinterest16"></a>';
 	}
 
-	$socialURL = get_theme_mod('fgymm_social_vk', '#');
+	$socialURL = get_theme_mod('fgymm_social_vk');
 	if ( !empty($socialURL) ) {
 
 		echo '<li><a href="' . esc_url( $socialURL ) . '" title="' . __('Follow us on VK', 'fgymm') . '" class="vk16"></a>';
 	}
 
-	$socialURL = get_theme_mod('fgymm_social_flickr', '#');
+	$socialURL = get_theme_mod('fgymm_social_flickr');
 	if ( !empty($socialURL) ) {
 
 		echo '<li><a href="' . esc_url( $socialURL ) . '" title="' . __('Follow us on Flickr', 'fgymm') . '" class="flickr16"></a>';
 	}
 
-	$socialURL = get_theme_mod('fgymm_social_vine', '#');
+	$socialURL = get_theme_mod('fgymm_social_vine');
 	if ( !empty($socialURL) ) {
 
 		echo '<li><a href="' . esc_url( $socialURL ) . '" title="' . __('Follow us on Vine', 'fgymm') . '" class="vine16"></a>';
@@ -368,20 +368,18 @@ function fgymm_display_slider() {
 		<?php
 			// display slides
 			for ( $i = 1; $i <= 3; ++$i ) {
-
-					$defaultSlideContent = __( '<h3>This is Default Slide Title</h3><p>You can completely customize Slide Background Image, Title, Text, Link URL and Text.</p><a title="Read more" href="#">Read more</a>', 'fgymm' );
 					
 					$defaultSlideImage = get_template_directory_uri().'/images/slider/' . $i .'.jpg';
 
-					$slideContent = get_theme_mod( 'fgymm_slide'.$i.'_content', html_entity_decode( $defaultSlideContent ) );
+					$slideContent = get_theme_mod( 'fgymm_slide'.$i.'_content' );
 					$slideImage = get_theme_mod( 'fgymm_slide'.$i.'_image', $defaultSlideImage );
-
 				?>
-
 					<div data-thumb="<?php echo esc_attr( $slideImage ); ?>" data-src="<?php echo esc_attr( $slideImage ); ?>">
-						<div class="camera_caption fadeFromBottom">
-							<?php echo $slideContent; ?>
-						</div>
+						<?php if ($slideContent) : ?>
+								<div class="camera_caption fadeFromBottom">
+									<?php echo $slideContent; ?>
+								</div>
+						<?php endif; ?>
 					</div>
 <?php		} ?>
 	</div><!-- #camera_wrap -->
@@ -419,6 +417,11 @@ function fgymm_the_content_single() {
 	the_content( __( 'Read More...', 'fgymm') );
 }
 
+function fgymm_sanitize_checkbox( $checked ) {
+	// Boolean check.
+	return ( ( isset( $checked ) && true == $checked ) ? true : false );
+}
+
 /**
  * Register theme settings in the customizer
  */
@@ -439,7 +442,7 @@ function fgymm_customize_register( $wp_customize ) {
 	$wp_customize->add_setting(
 			'fgymm_slider_display',
 			array(
-					'default'           => 1,
+					'default'           => 0,
 					'sanitize_callback' => 'fgymm_sanitize_checkbox',
 			)
 	);
@@ -464,7 +467,6 @@ function fgymm_customize_register( $wp_customize ) {
 		$wp_customize->add_setting(
 			$slideContentId,
 			array(
-				'default'           => __( '<h2>This is Default Slide Title</h2><p>You can completely customize Slide Background Image, Title, Text, Link URL and Text.</p><a title="Read more" href="#">Read more</a>', 'fgymm' ),
 				'sanitize_callback' => 'force_balance_tags',
 			)
 		);
@@ -542,7 +544,6 @@ function fgymm_customize_register( $wp_customize ) {
 	$wp_customize->add_setting(
 		'fgymm_social_facebook',
 		array(
-		    'default'           => '#',
 		    'sanitize_callback' => 'esc_url_raw',
 		)
 	);
@@ -561,7 +562,6 @@ function fgymm_customize_register( $wp_customize ) {
 	$wp_customize->add_setting(
 		'fgymm_social_google',
 		array(
-		    'default'           => '#',
 		    'sanitize_callback' => 'esc_url_raw',
 		)
 	);
@@ -580,7 +580,6 @@ function fgymm_customize_register( $wp_customize ) {
 	$wp_customize->add_setting(
 		'fgymm_social_twitter',
 		array(
-		    'default'           => '#',
 		    'sanitize_callback' => 'esc_url_raw',
 		)
 	);
@@ -599,7 +598,6 @@ function fgymm_customize_register( $wp_customize ) {
 	$wp_customize->add_setting(
 		'fgymm_social_linkedin',
 		array(
-		    'default'           => '#',
 		    'sanitize_callback' => 'esc_url_raw',
 		)
 	);
@@ -618,7 +616,6 @@ function fgymm_customize_register( $wp_customize ) {
 	$wp_customize->add_setting(
 		'fgymm_social_instagram',
 		array(
-		    'default'           => '#',
 		    'sanitize_callback' => 'esc_url_raw',
 		)
 	);
@@ -637,7 +634,6 @@ function fgymm_customize_register( $wp_customize ) {
 	$wp_customize->add_setting(
 		'fgymm_social_rss',
 		array(
-		    'default'           => get_bloginfo( 'rss2_url' ),
 		    'sanitize_callback' => 'esc_url_raw',
 		)
 	);
@@ -656,7 +652,6 @@ function fgymm_customize_register( $wp_customize ) {
 	$wp_customize->add_setting(
 		'fgymm_social_tumblr',
 		array(
-		    'default'           => '#',
 		    'sanitize_callback' => 'esc_url_raw',
 		)
 	);
@@ -675,7 +670,6 @@ function fgymm_customize_register( $wp_customize ) {
 	$wp_customize->add_setting(
 		'fgymm_social_youtube',
 		array(
-		    'default'           => '#',
 		    'sanitize_callback' => 'esc_url_raw',
 		)
 	);
@@ -694,7 +688,6 @@ function fgymm_customize_register( $wp_customize ) {
 	$wp_customize->add_setting(
 		'fgymm_social_pinterest',
 		array(
-		    'default'           => '#',
 		    'sanitize_callback' => 'esc_url_raw',
 		)
 	);
@@ -713,7 +706,6 @@ function fgymm_customize_register( $wp_customize ) {
 	$wp_customize->add_setting(
 		'fgymm_social_vk',
 		array(
-		    'default'           => '#',
 		    'sanitize_callback' => 'esc_url_raw',
 		)
 	);
@@ -732,7 +724,6 @@ function fgymm_customize_register( $wp_customize ) {
 	$wp_customize->add_setting(
 		'fgymm_social_flickr',
 		array(
-		    'default'           => '#',
 		    'sanitize_callback' => 'esc_url_raw',
 		)
 	);
@@ -751,7 +742,6 @@ function fgymm_customize_register( $wp_customize ) {
 	$wp_customize->add_setting(
 		'fgymm_social_vine',
 		array(
-		    'default'           => '#',
 		    'sanitize_callback' => 'esc_url_raw',
 		)
 	);
